syntax = "proto3";

option csharp_namespace = "GreeterService";

package GreeterPackage;

// The greeting service definition.
service Greeter {  
  rpc SayHelloRequest (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
